src/css/main.sass
@import 'bootstrap.min.css'

$primary-color: #18baba
$secondary-color: #1E4AB7
$muted-color: #e0ebf3

body
  background: #fbfbfb !important

@media (max-width: 767px)
  html
    font-size: 0.83rem !important

.color-primary
  color: $primary-color !important

.color-secondary
  color: $secondary-color !important

.bg-color-primary
  background-color: $primary-color !important

.bg-color-secondary
  background-color: $secondary-color !important

@font-face
  font-family: 'ALS'
  src: url("../fonts/ALS Schlange Sans.otf")
  font-weight: normal

@font-face
  font-family: 'ALS'
  src: url("../fonts/ALS Schlange Sans Bold.otf")
  font-weight: 700

@font-face
  font-family: 'ALS'
  src: url("../fonts/ALS Schlange Sans Black.otf")
  font-weight: 900

@font-face
  font-family: 'ALS'
  src: url("../fonts/ALS Schlange Sans Light.otf")
  font-weight: 300

@font-face
  font-family: 'ALS'
  src: url("../fonts/ALS Schlange Sans Thin.otf")
  font-weight: 100

html, p, a, span, b, i, strong, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6
  font-family: 'ALS', sans-serif !important
  font-weight: normal

.btn
  word-wrap: break-word !important
  white-space: normal !important

b,strong
  font-weight: 700

.navbar
  background: #ffffff !important

  li
    &:hover
      background: #e4e4e4

.navbar__bordered_bottom
  border-bottom: 5px solid $primary-color
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)

.navbar-item__bordered-left
  box-sizing: padding-box

@media (min-width: 768px)

  .navbar-item__bordered-left
    border-left: 1px solid $muted-color

.presentation-block
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/first-screen-bg.png') center center
  background-size: cover

.custom-button
  background-color: $primary-color !important
  border-radius: 50px !important
  border: 2px solid rgba(255, 255, 255, 1) !important
  transition: all 0.2s ease-in
  box-sizing: content-box !important

  &:hover
    background: linear-gradient(to right, $secondary-color -5%, $primary-color 105%)

.event-block
  .event-block_title
    width: 100%
    font-weight: 700
    background: $muted-color

  .event-block_date
    width: 100%
    background: $primary-color
    font-weight: 700
    text-align: center
    color: #FFFFFF

.feedback-form-wrapper
  background: #FFFFFF
  border-radius: 20px
  border: 2px solid $primary-color
  position: relative
  //box-shadow: 0 0 10px rgba(0, 0, 0, 0.3)

  &_title
    position: absolute
    top: 0
    left: 50%
    color: $primary-color
    transform: translate(-50%, -50%)
    background: #FFFFFF

.social-block a
  opacity: 0.7

  &:hover
    opacity: 1

.btn-pagenav
  border-radius: 30px
  background: $primary-color
  color: #FFFFFF
  border: none !important
  opacity: .9

  &:hover
    opacity: 1

.btn-navigate
  border-radius: 30px
  color: #FFFFFF !important

  &:hover
    color: #FFFFFF !important
    background: rgba(255, 255, 255, .3)

@media (max-width: 768px)
  .btn-navigate
    width: 60% !important

.contacts-block
  a
    color: inherit !important

.bordered-img
  border-radius: 20px

.bordered-slider
  border-radius: 0

.feedback-img
  width: 100%
  border: 3px solid $primary-color
  border-radius: 50%

.feedback-title-bg
  position: absolute
  height: 3.1em
  width: 100px
  top: 50px
  left: 50px
  background: $primary-color
  z-index: -1

.accordion_content-wrapper
  background: white
  border: 1px solid $primary-color
  z-index: 0
  min-height: 530px

.accordion-title
  cursor: pointer


  &:not(.collapsed)
    .accordion-title_number
      background: $primary-color

      p
        color: white !important

@media (min-width: 768px)
  .accordion-title:not(.collapsed)
    background: white
    z-index: 99
    overflow: hidden
    position: relative
    margin-right: -1px
    border: 1px solid $primary-color
    border-right: none

.collapse, .collapsing
  transition: none !important

.collapsing
  position: unset

